# Abschlussprojekt

./: .pdm-python  README.md  main.py  pyproject.toml  requirements.txt
data/: person_db.json
data/ekg/: simulated_ekg_av_block_grade3.csv
data/ekg_data/: simulated_stemi_ecg.csv
src/: ekg.py  main.py  person.py  persondb.py  probantenauswahl.py  probdel.py  startseite.py  vergl.py
