[project]
name = "Abschlussprojekt"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "JonPer00", email = "pj1959@mci4me.at"},
]
dependencies = ["pandas>=2.3.0", "numpy>=2.3.0", "streamlit>=1.45.1", "plotly>=6.1.2", "matplotlib>=3.10.3", "ipykernel>=6.29.5"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
